--- a/http接口/行情地址说明.md
+++ b/http接口/行情地址说明.md
@@ -3,7 +3,7 @@
 
 查询API为http协议，url为https://quote.aatest.online/quote-b-api
 
-每发送一次查询请求或者订阅请求时，需要带上token信息，当前支持的token如下：
+每发送一次查询请求或者订阅请求时，需要带上token信息，当前支持的token如下：<br/>
 a9037628-30ae-4ffa-bd3c-9f7beaf1d44d-1688712831666<br/>
 
 请求示例：<br/>
