--- a/websocket接口/行情地址说明.md
+++ b/websocket接口/行情地址说明.md
@@ -4,7 +4,7 @@
 
 订阅API为websocket协议，url为wss://quote.aatest.online/quote-b-ws-api
 
-每发送一次查询请求或者订阅请求时，需要带上token信息，当前支持的token如下：
+每发送一次查询请求或者订阅请求时，需要带上token信息，当前支持的token如下：<br/>
 a9037628-30ae-4ffa-bd3c-9f7beaf1d44d-1688712831666<br/>
 
 建立连接：<br/>wss://quote.aatest.online/quote-b-ws-api?token=a9037628-30ae-4ffa-bd3c-9f7beaf1d44d-1688712831666<br/>然后就可以订阅具体的接口数据了, 具体调用方式，请查看websocket接口列表
