--- a/http接口/行情地址说明.md
+++ b/http接口/行情地址说明.md
@@ -1,14 +1,13 @@
 # 行情地址说明
 /quote-b-api    加密货币查询API
 
-查询API为http协议，url为https://quote.aatest.online/quote-b-api
+查询API为http协议，url为https://quote.tradeswitcher.com/quote-b-api
 
-每发送一次查询请求或者订阅请求时，需要带上token信息，当前支持的token如下：<br/>
-a9037628-30ae-4ffa-bd3c-9f7beaf1d44d-1688712831666<br/>
+每发送一次查询请求或者订阅请求时，需要带上token信息，如果没有token，请访问https://alltick.co/进行注册获取
 
 请求示例：<br/>
 
-https://quote.aatest.online/quote-b-api/kline?token=a9037628-30ae-4ffa-bd3c-9f7beaf1d44d-1688712831666&query=queryData<br/>
+https://quote.tradeswitcher.com/quote-b-api/kline?token=你的token&query=queryData<br/>
 
 具体调用方式，请查看http接口列表
 
