--- a/websocket接口/行情地址说明.md
+++ b/websocket接口/行情地址说明.md
@@ -2,10 +2,9 @@
 
 /quote-b-ws-api 股票订阅API
 
-订阅API为websocket协议，url为wss://quote.aatest.online/quote-b-ws-api
+订阅API为websocket协议，url为wss://quote.tradeswitcher.com/quote-stock-b-ws-api
 
-每发送一次查询请求或者订阅请求时，需要带上token信息，当前支持的token如下：<br/>
-a9037628-30ae-4ffa-bd3c-9f7beaf1d44d-1688712831666<br/>
+每发送一次查询请求或者订阅请求时，需要带上token信息，如果没有token，请访问https://alltick.co/进行注册获取
 
-建立连接：<br/>wss://quote.aatest.online/quote-b-ws-api?token=a9037628-30ae-4ffa-bd3c-9f7beaf1d44d-1688712831666<br/>然后就可以订阅具体的接口数据了, 具体调用方式，请查看websocket接口列表
+建立连接：<br/>wss://quote.tradeswitcher.com/quote-stock-b-ws-api?token=你的token<br/>然后就可以订阅具体的接口数据了, 具体调用方式，请查看websocket接口列表
 
