--- a/http接口/接口限制.md
+++ b/http接口/接口限制.md
@@ -1,5 +1,10 @@
 # http接口限制
 
+# 官网：
+[https://alltick.co](https://alltick.co)
+# 本项目已经迁移至新地址，请移步到新的项目地址：
+[https://github.com/alltick/realtime-forex-crypto-stock-tick-finance-websocket-api](https://github.com/alltick/realtime-forex-crypto-stock-tick-finance-websocket-api)
+
 ## http接口限制1-IP类限制
 相同IP的多次请求，按接口确定具体次数限制，互不影响
 
