--- a/http接口/最新盘口报价查询.md
+++ b/http接口/最新盘口报价查询.md
@@ -1,5 +1,10 @@
 ## GET 最新盘口报价查询
 
+# 官网：
+[https://alltick.co](https://alltick.co)
+# 本项目已经迁移至新地址，请移步到新的项目地址：
+[https://github.com/alltick/realtime-forex-crypto-stock-tick-finance-websocket-api](https://github.com/alltick/realtime-forex-crypto-stock-tick-finance-websocket-api)
+
 GET /quote-b-api/depth-tick
 
 ### 请求参数
