--- a/http接口/行情地址说明.md
+++ b/http接口/行情地址说明.md
@@ -1,4 +1,10 @@
 # 行情地址说明
+
+# 官网：
+[https://alltick.co](https://alltick.co)
+# 本项目已经迁移至新地址，请移步到新的项目地址：
+[https://github.com/alltick/realtime-forex-crypto-stock-tick-finance-websocket-api](https://github.com/alltick/realtime-forex-crypto-stock-tick-finance-websocket-api)
+
 /quote-b-api    加密货币查询API
 
 查询API为http协议，url为https://quote.alltick.io/quote-b-api
