--- a/websocket接口/取消报价订阅.md
+++ b/websocket接口/取消报价订阅.md
@@ -1,4 +1,10 @@
 # 接口说明
+
+# 官网：
+[https://alltick.co](https://alltick.co)
+# 本项目已经迁移至新地址，请移步到新的项目地址：
+[https://github.com/alltick/realtime-forex-crypto-stock-tick-finance-websocket-api](https://github.com/alltick/realtime-forex-crypto-stock-tick-finance-websocket-api)
+
 # 请求-协议号：22006
 ## 数据格式:json
 ## 数据结构
